# base_django

./: .env.example  .gitignore  CONTINUACAO.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
core/: __init__.py  admin.py  api_access.py  api_auth.py  api_forms.py  api_queries.py  api_urls.py  api_urls_v1.py  api_views.py  apps.py  audit.py  canonical_modules.py  context_processors.py  forms.py  htmx.py  initial_modules.py  logging.py  middleware.py  models.py  module_catalog.py  modules.py  navigation.py  openapi.py  preferences.py  services.py  signals.py  tests.py  urls.py  views.py
core/account/: __init__.py  forms.py  views.py
core/admin/: __init__.py  audit.py  modules.py  users.py
core/api/: __init__.py  access.py  audit_logs.py  auth.py  forms.py  introspection.py  openapi.py  openapi_components.py  openapi_paths.py  operational.py  queries.py  responses.py  types.py  urls.py  urls_v1.py  views.py
core/audit/: __init__.py  context.py  logging.py  queries.py  snapshots.py
core/auth/: __init__.py  backends.py  forms.py  services.py  tasks.py  views.py
core/docs/: __init__.py  postman.py  views.py
core/errors/: __init__.py  views.py
core/management/: __init__.py  module_cli.py
core/middleware/: __init__.py  admin_disable.py  api_auth.py  audit.py  paths.py  rate_limit.py  request_id.py  session_timeout.py
core/migrations/: 0001_initial.py  0002_userinterfacepreference.py  0003_auditlog.py  0004_apiaccessprofile_apitoken_apiresourcepermission.py  (+5 more)
core/models/: __init__.py  (+4 more)
docs/: company_multitenancy_study.md  soft_delete_evaluation.md
panel/: __init__.py  admin.py  api_forms.py  api_urls.py  api_urls_v1.py  api_views.py  apps.py  autonomy.py  constants.py  dual_list.py  forms.py  helpers.py  mixins.py  models.py  tests.py  urls.py  views.py
scripts/: .env.example  api_request.py
templates/: base.html  dashboard.html  error_base.html  forbidden.html  module_page.html  not_found.html  public_api_base.html  server_error.html
(+173 files in other folders)
