[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base-django"
version = "0.1.0"
description = "Base Django com dashboard por modulos e painel interno."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<7.0",
    "django-bootstrap5>=26.2,<27.0",
    "django-axes[ipware]>=8.3,<9.0",
    "django-cors-headers>=4.4,<5.0",
    "django-csp>=4.0,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "django-ninja>=1.6,<2.0",
    "whitenoise>=6.12,<7.0",
    "sentry-sdk[django]>=2.57,<3.0",
    "celery[redis]>=5.6,<6.0",
    "django-storages[s3]>=1.14,<2.0",
]

[project.optional-dependencies]
dev = [
    "django-stubs>=5.2",
    "factory_boy>=3.3,<4.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=7.1,<8.0",
    "pytest-django>=4.8",
    "ruff>=0.6",
    "selenium>=4.0,<5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "panel*"]
namespaces = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --cov=core --cov=panel --cov-report=term --no-cov-on-fail -m \"not e2e\""
markers = [
    "e2e: smoke tests com Selenium e navegador real, executados separadamente da suite principal",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["config", "core", "panel"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
exclude = ["core/migrations/"]
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["factory", "factory.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
branch = true
source = ["core", "panel"]
omit = [
    "*/migrations/*",
    "config/settings/*",
    "config/asgi.py",
    "config/wsgi.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
